--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
   </header>
   <main class="content">
     <section class="profile page__section">
-      <div class="profile__image" style="background-image: url(<%=require('./images/avatar.jpg')%>)"></div>
+      <div class="profile__image" style="background-image: url(<%=require('./images/avatar.jpg')%>)">
+</div>
+
       <div class="profile__info">
         <h1 class="profile__title">Жак-Ив Кусто</h1>
         <button class="profile__edit-button" type="button"></button>
@@ -36,21 +38,73 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form" name="edit-profile">
-        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-        <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
+
+
+
+      <form class="popup__form" name="edit-profile" novalidate>
+
+        <input type="text"
+                name="name" 
+                class="popup__input popup__input_type_name"
+                placeholder="Имя" 
+                required
+                minlength="2"
+                maxlength="40"
+                pattern="^[A-Яа-яЁёA-Za-z\s\-]+$"
+                data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+              />
+
+                <span class="popup__error name-error"></span>
+
+            
+        <input type="text" 
+                name="description" 
+                class="popup__input popup__input_type_description" 
+                placeholder="Занятие" 
+                required
+                minlength="2"
+                maxlength="200"
+                pattern="^[А-Яа-яЁёA-Za-z\\s\\-]+$"
+                data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+                >
+                <span class="popup__error description-error"></span>
+
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
+
+
+
+
     </div>
   </div>
   <div class="popup popup_type_new-card">
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
-      <form class="popup__form" name="new-place">
-        <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
-        <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
-        <button type="submit" class="button popup__button">Сохранить</button>
+      <form class="popup__form" name="new-place" novalidate>
+
+        <input type="text" 
+        name="place-name" 
+        class="popup__input popup__input_type_card-name" 
+        placeholder="Название" 
+        required
+        minlength="2"
+        maxlength="30"
+        pattern="^[А-Яа-яЁёA-Za-z\s\-]+$"
+        data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы"
+        >
+
+        <span class="popup__error place-name-error"></span>
+
+        <input type="url" 
+        name="link" 
+        class="popup__input popup__input_type_url" 
+        placeholder="Ссылка на картинку" 
+        required>
+
+        <span class="popup__error link-error"></span>
+
+        <button type="submit" class="button popup__button" disabled>Сохранить</button>
       </form>
     </div>
   </div>
@@ -73,6 +127,7 @@
       <h2 class="card__title">
       </h2>
       <button type="button" class="card__like-button"></button>
+      <span class="card__like-count">0</span>
     </div>
   </li>
 </template>
