--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,10 @@
   <main class="content">
     <section class="profile page__section">
       <div class="profile__image" style="background-image: url(<%=require('./images/avatar.jpg')%>)">
-</div>
+        <div class="profile__image-overlay">
+          <button type="button" class="profile__image-edit-button"></button>
+        </div>
+      </div>
 
       <div class="profile__info">
         <h1 class="profile__title">Жак-Ив Кусто</h1>
@@ -115,6 +118,21 @@
       <p class="popup__caption"></p>
     </div>
   </div>
+  <div class="popup popup_type_edit-avatar">
+    <div class="popup__content">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Обновить аватар</h3>
+      <form class="popup__form" name="edit-avatar" novalidate>
+        <input type="url" 
+               name="avatar" 
+               class="popup__input popup__input_type_avatar" 
+               placeholder="Ссылка на картинку" 
+               required>
+        <span class="popup__error avatar-error"></span>
+        <button type="submit" class="button popup__button">Сохранить</button>
+      </form>
+    </div>
+  </div>
 </div>
 
 
@@ -126,8 +144,10 @@
     <div class="card__description">
       <h2 class="card__title">
       </h2>
-      <button type="button" class="card__like-button"></button>
-      <span class="card__like-count">0</span>
+      <div class="card__like-container">
+        <button type="button" class="card__like-button"></button>
+        <span class="card__like-count">0</span>
+      </div>
     </div>
   </li>
 </template>
